@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: tclInt.decls,v 1.115 2007/11/08 00:50:31 hobbs Exp $
+# RCS: @(#) $Id: tclInt.decls,v 1.116 2007/11/09 18:55:15 hobbs Exp $
 
 library tcl
 
@@ -944,8 +944,8 @@ declare 236 generic {
 
 # Added for 8.5b3 to improve binary glob match case
 declare 237 generic {
-    int TclByteArrayMatch(CONST char *string, int strLen,
-	    CONST char *pattern, int ptnLen, int nocase)
+    int TclByteArrayMatch(const unsigned char *string, int strLen,
+	    const unsigned char *pattern, int ptnLen)
 }
 
 ##############################################################################
